--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "@fontsource/inter": "^5.0.16",
     "@mui/icons-material": "^5.15.3",
     "@mui/material": "^5.15.3",
+    "@react-google-maps/api": "^2.19.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
+    "google-map-react": "^2.2.1",
     "google-maps": "^4.3.3",
+    "load-google-maps-api": "^2.0.2",
     "location-search": "^3.1.0",
     "opencage-api-client": "^1.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-autocomplete": "^2.7.3",
     "react-helmet": "^6.1.0",
     "react-material-ui-carousel": "^3.4.2",
     "react-places-autocomplete": "^7.3.0",
